     Time Machine  (only a bad dump exists which has been patched to make things work (4p version))
     Trick Shooter
     Viking King
MAC: Galaxy Play
Mirco: Spirit of 76
Playbar: Bloody Roller
Stargame: Slalom Code 0.3
          Space Ship
          White Force

Correct Dumps:
Bally: Flash Gordon (prototype rev. 1): Missing U10 dump was rediscovered
LTD: Columbia (previously supported was in fact one ROM from pecmen)
Taito: Lady Luck (sound dumps were the ones from Vegas before)
       Volley (formerly known as Voley Ball and also was missing main CPU dumps)
WMS: Contact, Disco Fever, Phoenix, World Cup (correct sound ROMs)
     Demolition Man (H-5B Coin Play), Demolition Man (DH-5B Coin Play LED Ghost Fix), Demolition Man (H-6B Coin Play) (all repatched correctly)

Clones:
Amazon Hunt II (French Free Play)
Amazon Hunt III (French Free Play)
Amazon Hunt III (rev. 1 French)
Amazon Hunt III (rev. 1 French Free Play)
Arena (Free Play)
Arena (French)
Arena (French Free Play)
Arena (German)
Arena (German Free Play)
Arena (rev. 1 Free Play)
Bad Girls (Free Play)
Bad Girls (French)
Bad Girls (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Bad Girls (German)
Bad Girls (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Big House (Free Play)
Big House (French)
Big House (French Free Play)
Big House (German)
Big House (German Free Play)
Black Knight 2000 (PF-1)
Bone Busters Inc. (Free Play)
Bone Busters Inc. (French Free Play)
Bone Busters Inc. (German)
Bone Busters Inc. (German Free Play)
Bounty Hunter (Free Play)
Bounty Hunter (German)
Bounty Hunter (German Free Play)
Caveman (Evolution, unofficial MOD)
Cheetah (Blue cabinet)
Chicago Cubs Triple Play (Free Play)
Chicago Cubs Triple Play (rev. 1 Free Play)
Diamond Lady (Free Play)
Diamond Lady (French)
Diamond Lady (French Free Play)
Diamond Lady (German)
Diamond Lady (German Free Play)
Excalibur
Excalibur (Free Play)